# f1-analysis

./: .gitignore  Makefile  dev_requirements.txt  requirements.txt  setup.cfg
notebooks/: LapCharts.ipynb  Laps.ipynb  Web-Scraper.ipynb
src/: data_prep.py  plot_drivers.py
src/f1lib/: data_prep.py  plot_lap.py  setup_mpl.py
tests/: test_data_prep.py
