[metadata]
name = f1lib
description = Library to analyse and plot FIA F1 Data
author = Martin O Leary
license = MIT 
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32

[options]
python_requires = >= 3.8
packages =
    f1lib
install_requires =
    fastf1==2.1.8;python_version>='3.8'
    beautifulsoup4
    requests
    highlight-text
package_dir =
    =src
zip_safe = no